# Tabit

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  Tabit.postman_collection.json  alembic.ini  departments_list.txt  docker-compose.yaml  employees_list.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs-template.md  feature_request.md
.github/workflows/: build_and_push.yaml  pytest.yaml  ruff.yml  stage_deploy.yaml
alembic/: README  env.py
alembic/versions/: 01_initial_migration.py  01_structure_initiation_after_refactoring.py  01_tabitadminuser_licensetype.py  02_add_missing_migration.py  02_add_unique_constraints.py  02_gg.py  02_usertabit_taguser_associationusertags.py  03_add_unique_constraint_to_license_name.py  03_company.py  04_add_rating_to_comment_and_user_comment_.py  04_department.py  04_the_company_s_connection_to_the_problem_.py  05_problem_meeting_task_and_etс.py  05_the_company_s_connection_to_the_problem_.py  06_add_transfer_counter_to_task_model.py  06_remove_id_field_from_multi_primary_key_.py  06_usertabit_add_relations.py  07_bugfix_department_taguser.py  08_add_landing_page_and_field_slug.py  09_bugfix_null_field.py  10_redesgn_relation_department.py  111ccacdc7f7_add_transfer_counter_to_task_model.py  11_datetime_for_company.py  12_datetime_for_company.py  1d52c1320ae5_initial_migration.py  21d88f9b4050_доб_каскадное_уд_в_моделе_usertabit_и_.py  24b5659ab0cd_add_cascading_del_for_problem_id_task_.py  2daa78b6eba1_удалены_primary_key_поля_left_и_right_.py  4a28cf67d85e_first_migration.py  5e5bef59ecc0_rename_transger_counter_to_transfer_.py  b7e4c238d0ed_объединение_голов.py  dae11c5cc7c1_вернули_id_в_task_с_autoincrement.py  e452ab207bc8_initial_migration.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  main.py
data/pgdata/global/: 1260  2676  pg_control
data/pgdata/pg_stat/: pgstat.stat
docs/: ONBOARDING_README.md  PERMISSIONS_README.md
fake_data_factories/: __init__.py  association_user_tags_factories.py  base_user_factory.py  company_factories.py  company_user_factories.py  constants.py  department_factories.py  fill_db.py  license_type_factories.py  tabit_user_factories.py  tag_user_factories.py
infra/: docker-compose.local-db.yaml  docker-compose.local-with-pgadmin.yaml  docker-compose.local.yaml  docker-compose.yaml
infra/local/: docker-compose.local.yaml
infra/stage/: docker-compose.stage.yaml  stage.Dockerfile  tabit.service
infra/test/: docker-compose.stage_test.yaml
pgadmin/: .pgpass.example  .pgpass.template  config_local.py  create-admin-folder.sh  servers.json
pgdata/base/1/: 2619
pgdata/base/16384/: 2619  pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
requirements/: .prod.txt.swp  dev.txt  prod.txt
scripts/: auto_migration_naming.py  filling_data_manager.py  pre_start.py
seeders/: __init__.py  base_runner.py  base_seeder.py  cli.py  constants.py  department_seeder.py  faker_instance.py  user_seeder.py
src/: config.py  constants.py  crud.py  database.py  logger.py  main.py  models.py  scripts.py
src/api/v1/: PERMISSIONS_README.md  (+6 more)
src/companies/: constants.py  models.py  schemas.py  types.py
src/core/: annotations.py  crud_base.py  db.py
src/database/: __init__.py  annotations.py  database.py  db_depends.py  db_users_depends.py  init_db.py  models.py  sc_db_session.py
src/features_v1/: __init__.py
src/models/: __init__.py  association_models.py  base.py  company.py  enum.py  file_path.py  landing_page.py  license_type.py  problem.py  problem_meeting.py  problem_message.py  tabit_management.py  tag.py  task.py  types.py  user.py
src/problems/: constants.py  crud.py  models.py  task_crud.py  validators.py
src/researches/: models.py  schemas.py
src/schemas/: __init__.py  admin_company.py  admin_user.py  company.py  file.py  license_type.py  mixins.py  problem.py  problem_meeting.py  problem_message.py  query_params.py  tag.py  task.py  user.py
src/seeders/: user_seeder.py
src/surveys/: models.py
src/tabit_management/: constants.py  manager.py  models.py  validators.py
src/users/: constants.py  models.py
templates/: email_template.html
tests/: company_user_auth.py  conftest.py  constants.py  test_company_user_auth.py  test_licenses.py  test_problem_feeds.py  test_tabit_admin_auth.py  test_tabit_management_company.py  test_tabit_management_licenses.py  utils.py
(+164 files in other folders)
