[tool.poetry]
name = "tabit"
version = "0.1.0"
description = "Online service for hr and conpany owners"
authors = [
    "Максим Караськин <mac7simka@yandex.ru>",
    "Татьяна Харченко <mistlenok@yandex.ru>",
    "Дмитрий Бурмагин <dmitryodinov@yandex.ru>",
    "Максим Березин <mms2000@mail.ru>",
    "Александр Колганов <greykol501@yandex.ru>",
    "Антон Стремоусов <stremousoff@gmail.com>",
    "Александр Хмылов <a.a.hm@yandex.ru>",
    "Лев Акчурин <levisserena@yandex.ru>",
    "Никита Пономаренко <nicros23@yandex.ru>"
]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
loguru = "^0.7.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
faker = "^33.3.1"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
