[tool.poetry]
name = "tabit"
version = "0.1.0"
description = "Online service for hr and conpany owners"
authors = [
    "Максим Караськин <mac7simka@yandex.ru>",
    "Татьяна Харченко <mistlenok@yandex.ru>",
    "Дмитрий Бурмагин <dmitryodinov@yandex.ru>",
    "Максим Березин <mms2000@mail.ru>",
    "Александр Колганов <greykol501@yandex.ru>",
    "Антон Стремоусов <stremousoff@gmail.com>",
    "Александр Хмылов <a.a.hm@yandex.ru>",
    "Лев Акчурин <levisserena@yandex.ru>",
    "Никита Пономаренко <nicros23@yandex.ru>"
]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
loguru = "^0.7.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.38"
click = "^8.1.8"
pydantic-extra-types = {extras = ["phone-numbers"], version = "^2.10.2"}
phonenumbers = "^8.13.55"
fastapi-mail = "1.4.2"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
faker = "^33.3.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"
pytest-postgresql = "^6.1.1"
termcolor = "^2.5.0"
factory-boy = "^3.3.3"
async-factory-boy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
